--- a/bonita/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_fr.properties
+++ b/bonita/webapp/src/main/webapp/WEB-INF/classes/locale/navigation/group/platform/administrators_fr.properties
@@ -32,4 +32,4 @@ administration.groupnavigation=Navigation de Groupe
 administration.portalnavigation=Gestion des Sites
 administration.servicesManagement=Gestion
 administration.monitoring=Surveillance
-administration.label.bonitaXP=Gestion avancée des Procesus
+administration.label.bonitaXP=Gestion avanc\u00e9e des Procesus
