PLF-3357 	Improve UXP of ProcessDocument drive PLF-3349 	Leave Application workflow form : bad field names PLF-3358 	Change BPM gadgets location on intranet home PLF-3359 	bad indentation on BP gadget PLF-3364 	change the Uri of page "BonitaTodo" to "tasks" PLF-3351 	BonitaTODO does not have same l&f as BonitaXP PLF-3352 	message displayed on activity stream is cryptic

--- a/bonita/component/uiextension/src/main/resources/locale/portlet/administration/ECMAdminPortlet_en.xml
+++ b/bonita/component/uiextension/src/main/resources/locale/portlet/administration/ECMAdminPortlet_en.xml
@@ -2479,7 +2479,7 @@
  <UICommentsDisplay>
  	<action>
  		
- 		<GetComment>Comment</GetComment>
+ 		<GetComment>Comments</GetComment>
 		
  		
  	</action>
